Kube-Manifest/nodejs-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-deployment
  labels:
    app: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: kiranacrdevops.azurecr.io/app1/calidusnodjs:$(Build.BuildId)
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: defaltaksacr-secret
